# website

./: Cargo.toml  README.md  website.service
src/: main.rs
views/: template.hbs
views/pages/: benchmark.hbs  error_404.hbs  geoloc.hbs  home.hbs  winglight.hbs  yellowSubmarine.hbs
