[package]
name = "website"
version = "0.1.0"
authors = ["Doyko <benjamin.bihanic@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["macros"]}
warp = "0.2"
handlebars = "3.0.1"
serde = "1.0"
serde_json = "1.0"
